--- a/dp2/content/solution/crypto-primitives.tex
+++ b/dp2/content/solution/crypto-primitives.tex
@@ -80,7 +80,7 @@ within a small, predefined norm bound. This allows the scheme to operate
 over small prime fields while providing $O(\log n)$ proof size and achieving
 transparency, as no trusted setup is required.
 
-\subsection{The wrapping SNARK SuperSpartan + Greyhound}
+\subsection{The wrapping SNARK SuperSpartan + Greyhound}\label{subsec:wrapping_snark}
 
 While LatticeFold allows for efficient recursion, the final artifact is a
 large lattice-based accumulator that is expensive to verify directly.
