Initial evaluation, FW, conslusion and doc structure

--- a/dp2/bibliography.bib
+++ b/dp2/bibliography.bib
@@ -423,3 +423,11 @@
       year = {2008},
       url = {https://eprint.iacr.org/2008/481}
 }
+
+@misc{FenbushiBenchmarks,
+	author = {Fenbushi Capital | 分布式资本},
+	title = {{B}enchmarking zk{V}{M}s: {C}urrent {S}tate and {P}rospects --- fenbushicapital.medium.com},
+	howpublished = {\url{https://fenbushicapital.medium.com/benchmarking-zkvms-current-state-and-prospects-ba859b44f560}},
+	year = {},
+	note = {[Accessed 29-12-2025]},
+}
