--- a/dp2/main.tex
+++ b/dp2/main.tex
@@ -68,6 +68,10 @@
 
     \include{content/implementation/implementation}
 
+    \include{content/evaluation}
+
+    \include{content/fw_and_conslussion}
+
     % Bibliography
     \printbibliography[heading=references,segment=\therefsegment]
 
