--- a/dp2/content/analysis/snarkification.tex
+++ b/dp2/content/analysis/snarkification.tex
@@ -48,7 +48,7 @@ computation, often polylogarithmic in the computation's complexity \cite{BCCT11}
 
 \subsection{Snarkifying consensus}
 
-The 'Leam consensus' \cite{LeanConsensus} is a research initiative, introduced
+The 'Lean consensus' \cite{LeanConsensus} is a research initiative, introduced
 by Justin Drake at Devcon 2024 \cite{JustinDrakeBeamchain}, aimed at redesigning and improving
 Ethereum's consensus mechanism. A key aspect of this proposal involves
 leveraging SNARKs to make consensus layer state transitions provable, in near
