--- a/dp2/pages/time_schedule.tex
+++ b/dp2/pages/time_schedule.tex
@@ -18,7 +18,7 @@
 \hline
 5\textsuperscript{th}-7\textsuperscript{th} week    & Researching Ethereum's architecture \\
 \hline
-8\textsuperscript{th}-9\textsuperscript{th} week    & Researching Beam Chain initiative \\
+8\textsuperscript{th}-9\textsuperscript{th} week    & Researching Lean Consensus initiative \\
 \hline
 10\textsuperscript{th}-11\textsuperscript{th} week  & Researching ZkEVMs, ZkVMs \\
 \hline
@@ -30,13 +30,15 @@
 
 \begin{tabular}{|l||p{0.8\textwidth}|}
 \hline
-1\textsuperscript{st}-3\textsuperscript{rd} week    & Designing a ZKP proof system based on lattices  \\
+1\textsuperscript{st}-3\textsuperscript{rd} week    & Designing an IVC instantiation with LatticeFold  			\\
 \hline
-4\textsuperscript{th}-6\textsuperscript{th} week    & Designing a ZkVM based on new lattice based ZKP system  \\
+4\textsuperscript{th}-6\textsuperscript{th} week    & Designing integration between IVC loop and RISC-V VM  	\\
 \hline
-7\textsuperscript{th}-12\textsuperscript{th} week   & Implementing a ZkVM  \\
+7\textsuperscript{th}-9\textsuperscript{th} week    & Designing memory consistency checks and wrapping SNARK 	\\
 \hline
-13\textsuperscript{th} week  & Documenting design and implementation  \\
+10\textsuperscript{th}-12\textsuperscript{th} week	& Implementing RISC-V VM, RISC-V constraints, IVC loop   	\\
+\hline
+13\textsuperscript{th} week  						& Finishing DP2 document   									\\
 \hline
 \end{tabular}
 
@@ -44,12 +46,14 @@
 
 \begin{tabular}{|l||p{0.8\textwidth}|}
 \hline
-1\textsuperscript{st}-3\textsuperscript{rd} week    & Testing ZkEVM compiled into RISC-V in designed ZkVM \\
+1\textsuperscript{st}-2\textsuperscript{nd} week    & Implementing in-circuit NIFS verifier, completing IVC loop	\\
 \hline
-4\textsuperscript{th}-6\textsuperscript{th} week    & Benchmarking performance, proof sizes of the ZkEVM \\
+3\textsuperscript{th}-7\textsuperscript{th} week    & Implementing memory consistency checks and wrapping SNARK  	\\
 \hline
-7\textsuperscript{th}-10\textsuperscript{th} week   & Optimizing ZkVM \\
+8\textsuperscript{th}-9\textsuperscript{th} week    & Benchmarking against different ZkVMs 	\\
 \hline
-11\textsuperscript{th}-13\textsuperscript{th} week  & Writing final version of document \\
+10\textsuperscript{th}-11\textsuperscript{th} week	& Optimizing implementation  							\\
+\hline
+12\textsuperscript{th}-13\textsuperscript{th} week	& Finishing DP3 document  							\\
 \hline
 \end{tabular}
